New customArgLine property for custom surefire parameters
There is now a new empty property, that you can override in your
test pom, to get some custom args into surefire's argLine.