@@ -14,6 +14,7 @@
 	
 	<properties>
 		<apache-tomcat-7.home>${project.build.directory}/apache-tomcat-7.0.54</apache-tomcat-7.home>
+		<customArgLine>-Dreddeer.config=${basedir}/bin</customArgLine>
 	</properties>
 
 	<profiles>
@@ -61,7 +62,6 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<useUIThread>false</useUIThread>
-					<argLine>-Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dreddeer.config=${basedir}/bin</argLine>
 					<dependencies combine.children="append">
 								<!-- This entry should enable creating of default JDK on Mac -->
 								<dependency>
